fix double scrollbars

--- a/frontend/styles/tag.module.scss
+++ b/frontend/styles/tag.module.scss
@@ -1,5 +1,4 @@
 .tagList {
-  min-height: calc(100vh - 70px);
   margin-top: 5px;
   padding-bottom: 5px;
   border-radius: 10px;
